--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,11 @@ header a {
   color: #fff;
 }
 
+body {
+  background-color: #000;
+}
+
+
 header::after {
   content: "";
   width: 100%;
@@ -356,7 +361,7 @@ form button.btn-primary:hover {
 ------------------------------------*/
 .featured {
   padding: 80px 0;
-  background-color: #fafafa;
+  background-color: #00000052;
 }
 
 .featured p {
