--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ header::after {
 }
 
 .contact i {
-  color: #ee1515;
+  color: #2632eb;
   margin-right: 10px;
 }
 
@@ -81,7 +81,7 @@ header::after {
 }
 
 .login i {
-  color: #ee1515;
+  color: #2632eb;
   margin-right: 8px;
 }
 
@@ -104,7 +104,7 @@ header::after {
   display: inline-block;
   width: 40px;
   height: 40px;
-  border: 1px solid #ee1515;
+  border: 1px solid #2632eb;
   border-radius: 4px;
   line-height: 40px;
   text-align: center;
@@ -114,7 +114,7 @@ header::after {
 
 .social a:hover {
   color: #fff;
-  background-color: #ee1515;
+  background-color: #2632eb;
 }
 
 .navbar-brand img {
@@ -139,7 +139,7 @@ header::after {
 }
 
 .navbar-collapse .nav-link:hover {
-  color: #ee1515;
+  color: #2632eb;
 }
 
 .cart,
@@ -152,7 +152,7 @@ header::after {
 .cart:hover,
 .login-icon:hover,
 .search-icon:hover {
-  color: #ee1515;
+  color: #2632eb;
 }
 
 .cart {
@@ -162,7 +162,7 @@ header::after {
 form input.btn-primary:hover,
 form button.btn-primary:hover {
   background-color: #fff;
-  color: #ee1515;
+  color: #2632eb;
 }
 
 /*-----------------------------------
@@ -187,7 +187,7 @@ form button.btn-primary:hover {
 }
 
 .hero .slide-content span {
-  color: #ee1515;
+  color: #2632eb;
 }
 
 .hero .slide-content h1 {
@@ -290,7 +290,7 @@ form button.btn-primary:hover {
 .cta-content {
   padding: 30px 0 90px;
   color: #fff;
-  background-color: #ee1515;
+  background-color: #2632eb;
   position: relative;
   z-index: 1;
 }
@@ -330,11 +330,11 @@ form button.btn-primary:hover {
 }
 
 .title .title-blue {
-  color: #26264b;
+  color: #2632eb;
 }
 
 .title .title-primary {
-  color: #ee1515;
+  color: #2632eb;
 }
 
 .services {
@@ -350,7 +350,7 @@ form button.btn-primary:hover {
 }
 
 .services h5 {
-  color: #26264b;
+  color: #2632eb;
   border-bottom: 2px solid #e7e7e7;
   padding-bottom: 5px;
   margin-bottom: 10px;
@@ -370,12 +370,12 @@ form button.btn-primary:hover {
 
 .featured .media i {
   font-size: 24px;
-  color: #ee1515;
+  color: #2632eb;
 }
 
 .featured .media h5 {
   text-transform: uppercase;
-  color: #26264b;
+  color: #2632eb;
 }
 
 .featured .btn {
@@ -443,7 +443,7 @@ form button.btn-primary:hover {
 }
 
 .post-content h3 a {
-  color: #26264b;
+  color: #2632eb;
   font-weight: 600;
 }
 
@@ -457,7 +457,7 @@ form button.btn-primary:hover {
 }
 
 .post-content a:hover {
-  color: #26264b;
+  color: #2632eb;
 }
 
 .post-content .post-btn {
@@ -474,7 +474,7 @@ form button.btn-primary:hover {
 
 .post-content .post-btn:hover {
   color: #fff;
-  background-color: #ee1515;
+  background-color: #2632eb;
 }
 
 /*-----------------------------------
@@ -482,7 +482,7 @@ form button.btn-primary:hover {
 ------------------------------------*/
 .trust {
   padding: 75px 0;
-  background-color: #26264b;
+  background-color: #2632eb;
   color: #ddd;
   position: relative;
 }
@@ -577,7 +577,7 @@ form button.btn-primary:hover {
   padding: 65px 0 40px;
   margin-top: 23px;
   color: #fff;
-  background: #26264b;
+  background: #2632eb;
   border: 0px solid #fff;
   position: relative;
   overflow: hidden;
@@ -639,7 +639,7 @@ form button.btn-primary:hover {
 }
 
 .single-pricing:hover span {
-  background-color: #26264b;
+  background-color: #2632eb;
 }
 
 .single-pricing:hover .desc {
@@ -661,13 +661,13 @@ form button.btn-primary:hover {
     1 - Testimonials
 ------------------------------------*/
 .testimonial-and-clients {
-  background: url(../images/test-clients-bg.png) center center/cover no-repeat #ee1515;
+  background: url(../images/test-clients-bg.png) center center/cover no-repeat #2632eb;
 }
 
 .testimonials {
   padding: 95px 0 85px;
   color: #fff;
-  border-bottom: 1px solid #26264b;
+  border-bottom: 1px solid #2632eb;
 }
 
 .testimonials .test-img {
@@ -686,7 +686,7 @@ form button.btn-primary:hover {
 }
 
 .testimonials h5 {
-  color: #26264b;
+  color: #2632eb;
   margin-top: 15px;
 }
 
@@ -710,7 +710,7 @@ form button.btn-primary:hover {
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  background-color: #26264b;
+  background-color: #2632eb;
   margin-bottom: 0;
   transition: all 0.2s ease-in-out;
 }
@@ -751,7 +751,7 @@ form button.btn-primary:hover {
     1 - Footer
 ------------------------------------*/
 footer {
-  background: url(../images/footer-bg.png) center center/cover no-repeat #26264b;
+  background: url(../images/footer-bg.png) center center/cover no-repeat #2632eb;
 }
 
 /*-----------------------------------
@@ -777,7 +777,7 @@ footer {
 }
 
 .single-widget i {
-  color: #ee1515;
+  color: #2632eb;
 }
 
 .single-widget h6 {
@@ -853,8 +853,8 @@ span {
 
 .tags-widget a:hover {
   text-decoration: none;
-  color: #26264b;
-  background-color: #ee1515;
+  color: #2632eb;
+  background-color: #2632eb;
 }
 
 .subscribe-widget form {
@@ -877,7 +877,7 @@ span {
 }
 
 .subscribe-widget button {
-  background: #ee1515;
+  background: #2632eb;
   border: none;
   padding: 9px 14px;
   border-top-right-radius: 10px;
@@ -914,7 +914,7 @@ span {
 }
 
 .subscribe-widget .social-nav a:hover {
-  background-color: #ee1515;
+  background-color: #2632eb;
 }
 
 /*-----------------------------------
@@ -922,12 +922,12 @@ span {
 ------------------------------------*/
 .foot-note {
   padding: 35px 0;
-  background-color: #ee1515;
-  color: #26264b;
+  background-color: #2632eb;
+  color: #2632eb;
 }
 
 .foot-note a {
-  color: #26264b;
+  color: #2632eb;
 }
 
 .foot-note a:last-child {
