--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -9,7 +9,7 @@
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
-  --red: #dc3545;
+  --red: #2632eb;
   --orange: #fd7e14;
   --yellow: #ffc107;
   --green: #28a745;
@@ -18,7 +18,7 @@
   --white: #fff;
   --gray: #777;
   --gray-dark: #343a40;
-  --primary: #ee1515;
+  --primary: #2632eb;
   --secondary: #777;
   --success: #28a745;
   --info: #17a2b8;
@@ -167,7 +167,7 @@ sup {
 }
 
 a {
-  color: #ee1515;
+  color: #2632eb;
   text-decoration: none;
   background-color: transparent;
   transition: all 0.2s ease-in-out;
@@ -1827,7 +1827,7 @@ pre code {
 .form-control:focus {
   color: #fff;
   background-color: transparent;
-  border-color: #ee1515;
+  border-color: #2632eb;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
 }
@@ -2370,13 +2370,13 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #2632eb;
+  border-color: #2632eb;
 }
 
 .btn-primary:hover {
   color: #fff;
-  background-color: #ee1515;
+  background-color: #2632eb;
   border-color: #c20e0e;
 }
 
@@ -2386,8 +2386,8 @@ fieldset:disabled a.btn {
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #2632eb;
+  border-color: #2632eb;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
@@ -2641,14 +2641,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #ee1515;
-  border-color: #ee1515;
+  color: #2632eb;
+  border-color: #2632eb;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #2632eb;
+  border-color: #2632eb;
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
@@ -2656,15 +2656,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #ee1515;
+  color: #2632eb;
   background-color: transparent;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #2632eb;
+  border-color: #2632eb;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
@@ -2898,7 +2898,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #ee1515;
+  color: #2632eb;
   text-decoration: none;
 }
 
@@ -3199,7 +3199,7 @@ input[type="button"].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #ee1515;
+  background-color: #2632eb;
 }
 
 .dropdown-item.disabled, .dropdown-item:disabled {
@@ -3552,8 +3552,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #ee1515;
-  background-color: #ee1515;
+  border-color: #2632eb;
+  background-color: #2632eb;
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
@@ -3561,7 +3561,7 @@ input[type="button"].btn-block {
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #ee1515;
+  border-color: #2632eb;
 }
 
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
@@ -3617,8 +3617,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #ee1515;
-  background-color: #ee1515;
+  border-color: #2632eb;
+  background-color: #2632eb;
 }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
@@ -3704,7 +3704,7 @@ input[type="button"].btn-block {
 }
 
 .custom-select:focus {
-  border-color: #ee1515;
+  border-color: #2632eb;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
 }
@@ -3763,7 +3763,7 @@ input[type="button"].btn-block {
 }
 
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #ee1515;
+  border-color: #2632eb;
   box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
 }
 
@@ -3846,7 +3846,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #ee1515;
+  background-color: #2632eb;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3877,7 +3877,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #ee1515;
+  background-color: #2632eb;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3911,7 +3911,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #ee1515;
+  background-color: #2632eb;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4050,7 +4050,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #ee1515;
+  background-color: #2632eb;
 }
 
 .nav-fill .nav-item {
@@ -4363,7 +4363,7 @@ input[type="button"].btn-block {
 .navbar-light .navbar-nav .active > .nav-link,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .nav-link.active {
-  color: #ee1515;
+  color: #2632eb;
 }
 
 .navbar-light .navbar-toggler {
@@ -4380,11 +4380,11 @@ input[type="button"].btn-block {
 }
 
 .navbar-light .navbar-text a {
-  color: #ee1515;
+  color: #2632eb;
 }
 
 .navbar-light .navbar-text a:hover, .navbar-light .navbar-text a:focus {
-  color: #ee1515;
+  color: #2632eb;
 }
 
 .navbar-dark .navbar-brand {
@@ -4718,7 +4718,7 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #ee1515;
+  color: #2632eb;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4751,8 +4751,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #2632eb;
+  border-color: #2632eb;
 }
 
 .page-item.disabled .page-link {
@@ -4835,7 +4835,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #ee1515;
+  background-color: #2632eb;
 }
 
 a.badge-primary:hover, a.badge-primary:focus {
@@ -5146,7 +5146,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #ee1515;
+  background-color: #2632eb;
   transition: width 0.6s ease;
 }
 
@@ -5236,8 +5236,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #ee1515;
-  border-color: #ee1515;
+  background-color: #2632eb;
+  border-color: #2632eb;
 }
 
 .list-group-horizontal {
@@ -6346,7 +6346,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #ee1515 !important;
+  background-color: #2632eb !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6474,7 +6474,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #ee1515 !important;
+  border-color: #2632eb !important;
 }
 
 .border-secondary {
@@ -9505,7 +9505,7 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #ee1515 !important;
+  color: #2632eb !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
