--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -8,7 +8,7 @@
   --blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
-  --pink: #e83e8c;
+  --pink: #2632eb;
   --red: #2632eb;
   --orange: #fd7e14;
   --yellow: #ffc107;
@@ -23,7 +23,7 @@
   --success: #28a745;
   --info: #17a2b8;
   --warning: #ffc107;
-  --danger: #dc3545;
+  --danger: #2632eb;
   --light: #f8f9fa;
   --dark: #343a40;
   --breakpoint-xs: 0;
@@ -174,7 +174,7 @@ a {
 }
 
 a:hover {
-  color: #aa0c0c;
+  color: #2632eb;
   text-decoration: underline;
 }
 
@@ -1829,7 +1829,7 @@ pre code {
   background-color: transparent;
   border-color: #2632eb;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(17, 0, 255, 0.25);
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2356,7 +2356,7 @@ textarea.form-control {
 
 .btn:focus, .btn.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(17, 0, 255, 0.25);
 }
 
 .btn.disabled, .btn:disabled {
@@ -2652,7 +2652,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(0, 17, 255, 0.5);
 }
 
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
@@ -2669,7 +2669,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(25, 0, 255, 0.5);
 }
 
 .btn-outline-secondary {
@@ -3557,7 +3557,7 @@ input[type="button"].btn-block {
 }
 
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(4, 8, 238, 0.932);
 }
 
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
@@ -3626,11 +3626,11 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(238, 21, 21, 0.5);
+  background-color: rgba(17, 0, 255, 0.582);
 }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(238, 21, 21, 0.5);
+  background-color: rgba(17, 0, 252, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -3642,7 +3642,7 @@ input[type="button"].btn-block {
 }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(238, 21, 21, 0.5);
+  background-color: rgba(17, 0, 255, 0.582);
 }
 
 .custom-switch {
@@ -3681,7 +3681,7 @@ input[type="button"].btn-block {
 }
 
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(238, 21, 21, 0.5);
+  background-color: rgba(17, 0, 255, 0.582);
 }
 
 .custom-select {
@@ -3706,7 +3706,7 @@ input[type="button"].btn-block {
 .custom-select:focus {
   border-color: #2632eb;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(17, 0, 255, 0.3);
 }
 
 .custom-select:focus::-ms-value {
@@ -3764,7 +3764,7 @@ input[type="button"].btn-block {
 
 .custom-file-input:focus ~ .custom-file-label {
   border-color: #2632eb;
-  box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(17, 0, 255, 0.3);
 }
 
 .custom-file-input:disabled ~ .custom-file-label {
@@ -3827,15 +3827,15 @@ input[type="button"].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(17, 0, 255, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(17, 0, 255, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(17, 0, 255, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4734,7 +4734,7 @@ input[type="button"].btn-block {
 .page-link:focus {
   z-index: 2;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(17, 0, 255, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -4840,12 +4840,12 @@ a.badge:hover, a.badge:focus {
 
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
-  background-color: #c20e0e;
+  background-color: #2632eb;
 }
 
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(238, 21, 21, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(19, 3, 245, 0.589);
 }
 
 .badge-secondary {
