--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -659,7 +659,7 @@ form button.btn-primary:hover {
     1 - Testimonials
 ------------------------------------*/
 .testimonial-and-clients {
-  background: url(../images/test-clients-bg.png) center center/cover no-repeat #2632eb;
+  background: url(../images/test-clients-bg.png) center center/cover no-repeat #000;
 }
 
 .testimonials {
