--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -659,7 +659,7 @@ form button.btn-primary:hover {
     1 - Testimonials
 ------------------------------------*/
 .testimonial-and-clients {
-  background: url(../images/test-clients-bg.png) center center/cover no-repeat #000;
+  background: url(../images/test-clients-bg.png) center center/cover no-repeat #2632eb;
 }
 
 .testimonials {
@@ -920,7 +920,7 @@ span {
 ------------------------------------*/
 .foot-note {
   padding: 35px 0;
-  background-color: #2632eb;
+  background-color: #000000c4;
   color: #26264b;
 }
 
