--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -67,7 +67,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #777;
+  color: #fff;
   text-align: left;
   background-color: #fff;
 }
