--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -368,12 +368,12 @@ form button.btn-primary:hover {
 
 .featured .media i {
   font-size: 24px;
-  color: #2632eb;
+  color: #fff;
 }
 
 .featured .media h5 {
   text-transform: uppercase;
-  color: #26264b;
+  color: #fff;
 }
 
 .featured .btn {
@@ -659,13 +659,13 @@ form button.btn-primary:hover {
     1 - Testimonials
 ------------------------------------*/
 .testimonial-and-clients {
-  background: url(../images/test-clients-bg.png) center center/cover no-repeat #000;
+  background: url(../images/test-clients-bg.png) center center/cover no-repeat #2633eb00;
 }
 
 .testimonials {
   padding: 95px 0 85px;
   color: #fff;
-  border-bottom: 1px solid #26264b;
+  border-bottom: 1px solid #4b2826;
 }
 
 .testimonials .test-img {
@@ -708,7 +708,7 @@ form button.btn-primary:hover {
   width: 9px;
   height: 9px;
   border-radius: 50%;
-  background-color: #26264b;
+  background-color: #4b4a26;
   margin-bottom: 0;
   transition: all 0.2s ease-in-out;
 }
@@ -749,7 +749,7 @@ form button.btn-primary:hover {
     1 - Footer
 ------------------------------------*/
 footer {
-  background: url(../images/footer-bg.png) center center/cover no-repeat #26264b;
+  background: url(../images/footer-bg.png) center center/cover no-repeat #969696;
 }
 
 /*-----------------------------------
