--- a/assets/css/loader/loaders.css
+++ b/assets/css/loader/loaders.css
@@ -2318,6 +2318,6 @@
   width: 100%;
   height: 100%;
   z-index: 9999999;
-  background-color: #dc3545;
+  background-color: #0b0072;
   top: 0;
 }
