--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,7 +167,7 @@ form button.btn-primary:hover {
     1 - Hero
 ------------------------------------*/
 .hero {
-  background: url("../images/hero-bg.jpg") no-repeat center;
+  background: url("../images/Not2.png") no-repeat center;
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -328,7 +328,7 @@ form button.btn-primary:hover {
 }
 
 .title .title-blue {
-  color: #fff;
+  color: #d6d6d6;
 }
 
 .title .title-primary {
@@ -348,7 +348,7 @@ form button.btn-primary:hover {
 }
 
 .services h5 {
-  color: #fff;
+  color: #bebebe;
   border-bottom: 2px solid #e7e7e7;
   padding-bottom: 5px;
   margin-bottom: 10px;
@@ -749,7 +749,7 @@ form button.btn-primary:hover {
     1 - Footer
 ------------------------------------*/
 footer {
-  background: url(../images/footer-bg.png) center center/cover no-repeat #969696;
+  background: url(../images/footer-bg.png) center center/cover no-repeat #26264b;
 }
 
 /*-----------------------------------
@@ -779,7 +779,7 @@ footer {
 }
 
 .single-widget h6 {
-  color: #fff;
+  color: #2632eb;
 }
 
 .single-widget .media {
